--- a/VRChat/69/1160669.html
+++ b/VRChat/69/1160669.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZYEmEYYdu34riocwCRKJTBzbs3pCM8iGNSbJX019VQ0="></script>
+    "BdMe36Z/9E5BjG1xWt4sPmRCPFIWEX+4HHJ3rftGsmI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"llenn and p-chan","description":"Fanart Llen With Her lovely P-Chan\n\nit is a Humanoid 3D Character with humanoid Rig set up  and optimized polycount to be used for Games Character Assets or you can use it for VRchat but you need some adjustment for that.\n\n● Contents\n\n01. FBX File Data.\n02. All Texture data for the characters.\n\n● End of User Term\n\n- please don't redistribute this model in public.\n\n- you may modified this model ,but you can not redistribute the modified model in to public. \n\n-You may produces animation/game/Render Image/VRchat/MMD models with this model , but not redistribute the model data in public\n\n\nSketchfab 3D View : \nhttps://sketchfab.com/models/0829aedcc8874e2299918bb8d6e5c830\n\n● Contacts\nTwitter : https://twitter.com/Ravenart0\nFacebook: https://www.facebook.com/ravenart0/","url":"https://booth.pm/ja/items/1160669","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/5534b73f-15cb-4b0a-b768-044a95422b0d/i/1160669/6baf75eb-59f3-4fb4-8f25-6aa82e8f18e9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZYEmEYYdu34riocwCRKJTBzbs3pCM8iGNSbJX019VQ0="></script>
+    nonce="BdMe36Z/9E5BjG1xWt4sPmRCPFIWEX+4HHJ3rftGsmI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -463,9 +463,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
