--- a/VRChat/58/1159758.html
+++ b/VRChat/58/1159758.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FZPSoK0o6jQgfcbVP7doq39+5NWXS3I7WxV/3jIdyG4="></script>
+    "eM1l90QsiKxq05Svg/+AcfQb3rb0RbAqyLDojqmX6ug="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シャルロット写真集 Vol.1","description":"Kakkoii（カッコいい）を求め、布教するHigrashiによるシャーロ改変アバター「シャルロット＝レッドグレイヴ」のVRChat写真集。\n今回はイベント「Virtual Collection Stage0 仮想人形乱舞活劇」で使われたワールドだけで撮影。\n得物を持ち出し、本格的にKakkoiiとアクションの撮影に入りました。どこかストーリー仕立てに見えます。\n写真総数は55枚。約120MBあります。","url":"https://booth.pm/ja/items/1159758","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/293876ef-983d-4aaf-9509-0b1beae881cf/i/1159758/079c2d4d-1d09-472a-814f-2fdfc2e8de4f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FZPSoK0o6jQgfcbVP7doq39+5NWXS3I7WxV/3jIdyG4="></script>
+    nonce="eM1l90QsiKxq05Svg/+AcfQb3rb0RbAqyLDojqmX6ug="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -402,9 +402,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
