--- a/VRChat/79/1152579.html
+++ b/VRChat/79/1152579.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "84Son8mHzVvm4ELxqT5NNpoTUdXzndRWtHNNkmrtzVo="></script>
+    "VVy9UmUYYJW+n3+2SanVKsVAEG4Ab/Iiuhmo2a5ZjdM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCF 腕部装着型生活補助デバイスRip-Girl 3500","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\nロングセラーのRip-Girlシリーズにニューモデルが登場！\nその名もRIP Girl3500！！従来の拡張性はそのままにより洗練されたデザインへと進化しました！！物理ボタンの追加や大画面化。さらに強度の上昇により従来機より多くの核爆発に耐えられます！！※お客様の生命を脅かす危険性があります。実行する場合は万全の注意を。\nさあ！仮想空間のウェイストランドを、新しくなったRIP Girlと共に歩みましょう！！\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\n\nポリ数\nRIP Girl3500:1678\n\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1152579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1152579/f04d2610-da37-49f1-a799-542f92e75c3f_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="84Son8mHzVvm4ELxqT5NNpoTUdXzndRWtHNNkmrtzVo="></script>
+    nonce="VVy9UmUYYJW+n3+2SanVKsVAEG4Ab/Iiuhmo2a5ZjdM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -171,7 +171,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      549
+                                      550
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -187,7 +187,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      549
+                                      550
                                     </div>
                                   </div></a>
                                 </div>
@@ -463,9 +463,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
